--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,12 +6,12 @@ name: Docker
 # documentation.
 
 on:
-  schedule:
-    - cron: "20 13 * * *"
+  #schedule:
+  #  - cron: "20 13 * * *"
   push:
     branches: ["latest", "main", "master"]
     # Publish semver tags as releases.
-    tags: ["v*.*.*"]
+    # tags: ["v*.*.*"]
   pull_request:
     branches: ["latest", "main", "master"]
 
